<resources>
    <string name="app_name">AI Photo Enhancer</string>

    <string name="pro">PRO</string>
    <string name="ai_photo">AI Photo</string>
    <string name="remove_object">Remove Object</string>
    <string name="save">Save</string>
    <string name="cartoon">Cartoon</string>
    <string name="remove_bg">Remove Bg</string>
    <string name="descratch">Descratch</string>
    <string name="lens_blur">Lens Blur</string>
    <string name="colorize">Colorize</string>
    <string name="dehaze">Dehaze</string>
    <string name="enhance">Enhance</string>
    <string name="brighten">Brighten</string>
    <string name="ai_enhancer">AI Enhancer</string>
    <string name="enhance_title">Enhance</string>
    <string name="pro_enhance">Pro Enhance</string>
    <string name="removebg">Remove BG</string>
    <string name="remove_pro_bg">Pro Remove BG</string>
    <string name="pro_dehaze">Pro Dehaze</string>
    <string name="pro_descratch">Pro Descratch</string>
    <string name="cartton">Cartoon</string>
    <string name="pro_cartoon">Pro Cartoon</string>
    <string name="pro_lens">Pro Lens Blur</string>
    <string name="pro_colorize">Pro Colorize</string>
    <string name="pro_brighten">Pro Brighten</string>
    <string name="not_saved">I you do not save,you will lose it</string>
    <string name="not_yet_saved">Not Yet Saved</string>
    <string name="pro_save">Pro Save</string>
    <string name="still_exit">Still Exit</string>
    <string name="rate">Rate</string>
    <string name="thank_you_for_using_ai_enhancer">Thank you for Using AI Enhancer!</string>
    <string name="we_re_so_happy_for_your_review">We\'re so Happy for Your Review</string>
    <string name="we_love_hearing_from_you">We love hearing from you!</string>
    <string name="please_select_the_issue_you_are_experiencing">Please Select the issue you are experiencing</string>
    <string name="settings">Settings</string>
    <string name="ai_photo_pro">AI PHOTO PRO</string>
    <string name="enhance_and_upscale_image_upto_3x">Enhance and upscale image upto 3X</string>
    <string name="go_premium">Go Premium</string>
    <string name="do_you_want_to_exit_app">Do you want to Exit app?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="permission_request">Permission request.</string>
    <string name="permission_request_msg">With out permission app won\'t work properly.</string>

    <string name="ad_attribution">Ad</string>

    <!-- TEST AD'S eCPM FLORING -->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_openad_id" translatable="false">ca-app-pub-3940256099942544/3419835294</string>

    <!--interstial Ad id floring-->
    <string name="interstitial_high">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_mid">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_all">ca-app-pub-3940256099942544/1033173712</string>

    <!--native floring ad ids -->

    <string name="native_high">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_mid">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_all">ca-app-pub-3940256099942544/2247696110</string>

    <!--banner ad id florig-->

    <string name="banner_high">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_mid">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_all">ca-app-pub-3940256099942544/6300978111</string>
    <string name="server_not_found">Server Not Found</string>
    <string name="confirm_delete">Confirm delete ?</string>

    <!--END OF TEST ADS -->
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="you_can_cancel_your_subcription_any_time">You can cancel your subcription any time</string>
    <string name="update">Update</string>
    <string name="please_update_the_app_for_better_experience">Please Update the App for Better Experience</string>
</resources>