<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/save_sheet_bg"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/arial"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/not_yet_saved"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/not_saved" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/pro_card_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_gradient"
                android:orientation="vertical"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ai_pro_crown" />

                    <TextView
                        android:id="@+id/pro_tag_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/custom_thin"
                        android:text="@string/pro_save"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/custom_thin"
                    android:text="Better Effect &amp; No ads"

                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/save_ads_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pro_card_save"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/effect_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                         android:text="@string/save"
                        android:fontFamily="@font/arial"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/arial"
                    android:text="Watch Ads "
                    android:gravity="center"
                    android:textColor="@color/light_gray"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/still_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="2dp"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        android:text="@string/still_exit"
        android:textColor="@color/white"/>
</LinearLayout>