<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/save_sheet_bg"

    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="-95dp"
        android:src="@drawable/ai_rate_us_like_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/custom_thin"
        android:gravity="center"
        android:text="@string/thank_you_for_using_ai_enhancer"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:gravity="center"
        android:text="@string/we_re_so_happy_for_your_review"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/review_star1"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ai_review_star" />

        <ImageView
            android:id="@+id/review_star2"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ai_review_star" />

        <ImageView
            android:id="@+id/review_star3"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ai_review_star" />

        <ImageView
            android:id="@+id/review_star4"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ai_review_star" />

        <ImageView
            android:id="@+id/review_star5"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ai_review_star" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_gradient"
        android:gravity="center"
        android:padding="20dp"
        android:fontFamily="@font/custom"
        android:textColor="@color/white"
        android:text="@string/rate"
        android:textSize="18sp" />


</LinearLayout>